src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_InvalidTypeInTypeExtension.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel
 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
>
	<DockPanel.Resources>
		<Style TargetType="{x:Type TypeName=Buton}"> 		
			<Setter Property="Background" Value="Yellow" />
		</Style>
	</DockPanel.Resources>
	
	<Button />
</DockPanel>
</Page>
